--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ __recovery/uPrincipal.pas
 __recovery/uPrincipal.dfm
 Win32/Debug/uPrincipal.dcu
 Win32/Debug/GoogleCalendar.exe
+__history/uPrincipal.dfm.~3~
